--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
       <header class="header">
         <div class="header-logo"><img src="./img/logo.png" alt="logo" /></div>
         <div class="header-list">
+          <div class="burger-menu-main">
+            <img
+              src="./img/4781852_burger_line_list_menu_nav_icon.svg"
+              alt="4781852_burger_line_list_menu_nav_icon"
+            />
+          </div>
           <div class="header-list-all">
+            <div class="header-list-close">
+              <img
+                class="header-list-close-picture"
+                src="./img/211652_close_icon.svg"
+                alt="alt"
+              />
+            </div>
             <ul class="header-list-nav">
               <li class="header-list-nav-li">
                 <a href="#">Каталог инструментов</a>
@@ -33,7 +46,21 @@
               <li class="header-list-menu-li"><a href="#">Регистрация</a></li>
             </ul>
           </div>
+          <div class="burger-menu-more">
+            <img
+              class="burger-menu-more-picture"
+              src="./img/392499_lock_locked_log_login_padlock_icon.svg"
+              alt="392499_lock_locked_log_login_padlock_icon"
+            />
+          </div>
           <div class="header-list-main">
+            <div class="header-list-main-close">
+              <img
+                class="header-list-main-close-picture"
+                src="./img/211652_close_icon.svg"
+                alt="alt"
+              />
+            </div>
             <div class="header-list-main-banner"></div>
             <div class="header-list-main-info">
               <ul class="header-list-main-info-ul">
@@ -87,12 +114,35 @@
       </header>
 
       <main class="main">
+        <div class="main-menu">
+          <img
+            class="main-menu-picture"
+            src="./img/4213434_control_list_menu_more_options_icon.svg"
+            alt="4213434_control_list_menu_more_options_icon"
+          />
+        </div>
         <div class="main-block">
+          <div class="main-block-close">
+            <img
+              class="main-block-close-picture"
+              src="./img/211652_close_icon.svg"
+              alt="alt"
+            />
+          </div>
           <div class="main-block-search">
-            <img src="./img/search.svg" alt="search" />
+            <img
+              class="main-block-search-search"
+              src="./img/search.svg"
+              alt="search"
+            />
+            <img
+              class="main-block-search-close hidden"
+              src="./img/211652_close_icon.svg"
+              alt="211652_close_icon"
+            />
           </div>
           <ul class="main-block-list">
-            <li class="main-block-list-one"><a href="#">Перфораторы</a></li>
+            <li><a href="#">Перфораторы</a></li>
             <li><a href="#">Дрели</a></li>
             <li><a href="#">Шлифмашины</a></li>
             <li><a href="#">Пистолеты</a></li>
@@ -102,8 +152,12 @@
           </ul>
           <div class="main-block-sale"><a href="#">Распродажа</a></div>
         </div>
+        <div class="main-block-search-menu hidden">
+          <input placeholder="Поиск информации" type="text" />
+        </div>
       </main>
       <footer class="footer"></footer>
+      <script src="./script.js"></script>
     </div>
   </body>
 </html>
