--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
   <body>
     <div class="container">
       <header class="header">
-        <div class="header-logo"><img src="./img/logo.png" alt="logo" /></div>
+        <div class="header-logo">
+          <div class="header-logo-picture">
+            <img
+              class="header-logo-picture-img"
+              src="./img/entypo_tools.svg"
+              alt="logo"
+            />
+          </div>
+          <div class="header-logo-undertext">магазин инструмента</div>
+        </div>
+
         <div class="header-list">
           <div class="burger-menu-main">
             <img
