--- a/index.html
+++ b/index.html
@@ -106,11 +106,15 @@
               /><img src="./img/perf-3.svg" alt="perf" />
             </div>
             <div class="header-list-main-time">
-              <div class="header-list-main-time-work">
-                <p>Время работы:</p>
-                <span>10:00 — 19:00</span>
+              <div class="together">
+                <div class="header-list-main-time-work">
+                  <p>Время работы:</p>
+                  <span>10:00 — 19:00</span>
+                </div>
+                <div class="header-list-main-time-tel">
+                  <a href="tel">8 495 721-25-25</a>
+                </div>
               </div>
-              <div class="header-list-main-time-tel">8 495 721-25-25</div>
               <div class="header-list-main-time-city">
                 <p>Москва</p>
                 <a href="#"
